--- a/SIEMServer/SIEMServer.csproj
+++ b/SIEMServer/SIEMServer.csproj
@@ -30,4 +30,10 @@
     <ProjectReference Include="..\..\MyWorkerService\MyWorkerService\MyWorkerService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
